# iotserver

./: .env  .gitignore  CMakeLists.txt  readme.md
datastructures/: devicegenericdata.h  deviceheader.h
examples/: connect.cpp
include/: constants.hpp  receiver.hpp
src/: main.cpp  receiver.cpp
